Things to do, minor edits, <li> style fix
Change-Id: I7ce26a71867c9ba5030898f7e81994a6d98e1adc

--- a/src/public/assets/css/wedding.css
+++ b/src/public/assets/css/wedding.css
@@ -10,6 +10,10 @@ body {
 box-sizing: border-box;
 }
 
+ul {
+  list-style-type: circle;
+  list-style-position: inside
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
